--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -21,7 +21,7 @@
         <tbody>
           <% @groups.each do |group| %>
             <tr>
-              <td><%= attachment_image_tag(group, :image, :fill, 50, 50, fallback: "no_image.jpg") %></td>
+              <td><%= render 'layouts/errors', obj: @book %></td>
               <td><%= link_to group.name, group_path(group) %></td>
               <td><%= group.introduction %></td>
               <td><i class="fas fa-user-friends"> <%= group.users.count %></i></td>
