--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,5 @@
 <div class='container px-5 px-sm-0'>
+  <%= render 'layouts/errors', obj: @book %>
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
@@ -21,7 +22,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><%= attachment_image_tag(@group, :image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
+            <td><%= image_tag @group.get_image, size: '50x50' %></td>
             <td><%= @group.name %></td>
             <td><%= @group.introduction %></td>
             <td>
@@ -32,6 +33,7 @@
             <td>
               <% if @group.owner_id == current_user.id %>
                 <%= link_to 'Edit', edit_group_path(@group), class: "btn btn-sm btn-success" %>
+                <%= link_to "Notice an Event", group_new_mail_path(@group), class: "btn btn-sm btn-secondary"%>
               <% elsif @group.users.include?(current_user) %>
                 <%= link_to 'Leave this group', group_path(@group), method: :delete, class: "btn btn-sm btn-danger" %>
               <% else %>
