--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -12,7 +12,7 @@
        <%= f.text_area :introduction ,class: "form-control group_introduction" %>
 
       <label for="group_image">Group image</label>
-       <%= f.attachment_field :image, class: "form-control-file group_image" %>
+       <%= f.file_field :image, class: "form-control-file", accept: 'image/*' %>
 
       <div class = "form-group">
        <%= f.submit "Create group", class: "btn btn-secondary  bg-info text-white" %>
