--- a/app/views/groups/new_mail.html.erb
+++ b/app/views/groups/new_mail.html.erb
@@ -1,8 +1,9 @@
 <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-    <h2><%=@group.name %>メンバーへのメール</h2>
-    <%= form_with url: group_send_mail_path(@group),method: :get, local: true do |f| %>
+    <h3>Event Mail</h3>
+
+    <%= form_with url: group_send_mail_path(@group),method: :get, local:true do |f| %>
     <div class="form-group">
         <%= f.label :title %>
         <%= f.text_field :mail_title,class:'form-control'%>
